[tool.poetry]
name = "huggingfacehub"
version = "0.1.0"
description = ""
authors = ["snoopy_kr <snoopy_kr@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
huggingface-hub = ">=0.19.3,<1.0"
numpy = ">=1.24.4,<1.25.0"
sentencepiece = ">=0.1.98,<0.2.0"
transformers = ">=4.35.2,<5.0.0"
gguf = ">=0.1.0"
protobuf = ">=4.21.0,<5.0.0"
torch = ">=2.1.1,<2.2.0"
einops = ">=0.7.0,<0.8.0"
filelock = "^3.15.4"
packaging = ">=20.0"
pyyaml = ">=5.1"
regex = "!=2019.12.17"
requests = "^2.32.3"
tokenizers = ">=0.19,<0.20"
safetensors = ">=0.4.1"
tqdm = ">=4.27"
typing-extensions = "^4.12.2"
sympy = "^1.13.0"
networkx = "^3.3"
jinja2 = "^3.1.4"
fsspec = "^2024.6.1"
markupsafe = ">=2.0"
charset-normalizer = ">=2,<4"
idna = ">=2.5,<4"
urllib3 = ">=1.21.1,<3"
certifi = ">=2017.4.17"
mpmath = ">=0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
