[tool.poetry]
name = "huggingfacehub"
version = "0.1.0"
description = ""
authors = ["snoopy_kr <snoopy_kr@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
huggingface-hub = ">=0.19.3,<1.0"
langchain = "^0.2.16"
torch = "2.2.2"
torchaudio = "2.2.2"
torchvision = "0.17.2"
langchain-huggingface = "^0.0.3"
langchain-community = "^0.2.17"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
